--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,21 @@
-[build]
-  command = """
-    npm run postinstall
-    npm run build
-  """
-  publish = ".next"
-
-[build.environment]
-  NEXT_TELEMETRY_DISABLED = "1"
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["@prisma/client"]
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[build.environment]
+  NODE_VERSION = "14"
+
+[functions."api/*"]
+  included_files = ["prisma/**"]
+  node_bundler = "esbuild"
+  external_node_modules = ["@prisma/client"]
+
+[build]
+  command = "npm run build"
+  publish = ".next"
+
+[functions]
+  timeout = 30
