--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [functions]
   node_bundler = "esbuild"
   external_node_modules = ["@prisma/client"]
-  timeout = 30
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
@@ -17,3 +16,6 @@
 [build]
   command = "npm run build"
   publish = ".next"
+
+[functions.timeout]
+  duration = 30
