--- a/netlify.toml
+++ b/netlify.toml
@@ -14,7 +14,7 @@
   external_node_modules = ["@prisma/client"]
 
 [build]
-  command = "npm run build"
+  command = "npm run netlify-build"
   publish = ".next"
 
 [functions.timeout]
