--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "netlify-build": "npm run postinstall && npm run build",
     "start": "next start",
     "lint": "next lint"
