--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [functions]
   node_bundler = "esbuild"
   external_node_modules = ["@prisma/client"]
+  included_files = ["node_modules/bcrypt/**"]
 
 [functions."api/*"]
   included_files = ["prisma/**"]
