--- a/netlify.toml
+++ b/netlify.toml
@@ -12,8 +12,8 @@
   package = "@netlify/plugin-nextjs"
 
 [build]
-  command = "npm run build"
-  publish = ".next"
+command = "npm install --production=false && npm run build"
+     publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18"
