--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,11 @@
   node_bundler = "esbuild"
   external_node_modules = ["@prisma/client"]
 
+[functions."auth/*"]
+  included_files = ["prisma/**"]
+  node_bundler = "esbuild"
+  external_node_modules = ["@prisma/client"]
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
